bundle update _base and new locale entries

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -21,11 +21,11 @@ ar:
         heading: "من؛  كيف؛ ماذا؟"
         question_1:
           answer: |-
-            كلارات هي بوابة إليكترونية  والتي عن طريقها يمكن للمرء أن يجد عروض للمساعدة والدعم. فنحن نساعدك في العثور على مساعدة؛ ولكننا لا نقدم المشورة؛ لأن لها خبراء ونحن ندلك عليهم فقط. هنا يوجد <b>كلارات الأسرة<b> و <b>كلارات اللاجئين<b>
+            كلارات هي بوابة إليكترونية  والتي عن طريقها يمكن للمرء أن يجد عروض للمساعدة والدعم. فنحن نساعدك في العثور على مساعدة؛ ولكننا لا نقدم المشورة؛ لأن لها خبراء ونحن ندلك عليهم فقط. هنا يوجد <b>كلارات الأسرة</b> و <b>كلارات اللاجئين</b>
             <p>
             <ul>
             <li>
-            <b>كلارات الأسرة<b> تساعد الأطفال والشبان والأسر، الذين لديهم مشاكل ويبحثون عن مساعدة بالقرب منهم. فهنا تجد بسهولة مساعدة لك شخصيا أو لأسرتك أو لأصدقائك. وأيضاً لمن تعرف من الأطفال الآخرين  والشبان والأسر. يمكنك مشاهدة ما تقوم به كلارات الأسرة في هذا الفيلم %{link_to_family_movie}
+            <b>كلارات الأسرة</b> تساعد الأطفال والشبان والأسر، الذين لديهم مشاكل ويبحثون عن مساعدة بالقرب منهم. فهنا تجد بسهولة مساعدة لك شخصيا أو لأسرتك أو لأصدقائك. وأيضاً لمن تعرف من الأطفال الآخرين  والشبان والأسر. يمكنك مشاهدة ما تقوم به كلارات الأسرة في هذا الفيلم %{link_to_family_movie}
             </li>
             <li>
             <b>كلارات اللاجئين</b> تساعد اللاجئين، الذين يبحثون عن دعم بالقرب منهم. هنا يمكنك بسهولة أن تجد مساعدة على لك شخصيا ولأسرتك وأصدقائك. حتى وإن لك تكن أنت من اللاجئين ولكنك تعرف لاجئين في حاجة لمساعدة.
@@ -36,7 +36,7 @@ ar:
             name: "فيلم"
             target: _blank
             url: http://blog.clarat.org/العثور على مساعدة بسهولة-مشروعنا-كلارات-في-فيلم قصير/
-            var: "رابط _ل_الأسرة_فيلم"
+            var: link_to_family_movie
           question: "ما هي كلارات؟"
         question_10:
           answer: "تمويل <b>كلارات الأسرة</b> و<b>كلارات للاجئين</b> يأتي من %{link_to_bsz}."
@@ -83,7 +83,7 @@ ar:
             var: ref_to_how_to_find_right_help
           question: "كيف تعمل كلارات؟"
         question_4:
-          answer: "كلارات مجانية وستظل مجانية. فأي شخص يمكنه أن يبحث في <b>كلارات الأسرة<b> عن مساعدة للأطفال والشباب والأسر. وأي شخص يمكنه أن يبحث في <b>كلارات اللاجئين<b> عن مساعدة للاجئين."
+          answer: "كلارات مجانية وستظل مجانية. فأي شخص يمكنه أن يبحث في <b>كلارات الأسرة</b> عن مساعدة للأطفال والشباب والأسر. وأي شخص يمكنه أن يبحث في <b>كلارات اللاجئين</b> عن مساعدة للاجئين."
           question: "هل البحث في كلارات مجاني؟"
         question_5:
           answer: "البحث في كلارات دائما مجهول. وهذا يعني أنه لن يعرف أحد اسمك او عنوانك."
@@ -92,7 +92,7 @@ ar:
           answer: "نحن ننظر بشكل دائم إذا ما كانت المعلومات في كلارات لاتزال معاصرة. لأنه بهذه الطريقة  فقط يمكننا مساعدة الأطفال والشباب والأسر واللاجئين. فإذا لم تكن المعلومات لاتزال صحيحة فإنه يتم  تحديثها أي أننا نستبدلها. "
           question: "هل المعلومات في كلارات حديثة؟"
         question_7:
-          answer: "بعض العروض في <b>كلارات الأسرة<b> و<b>كلارات اللاجئين<b> يمكن الأستفادة منها من  كل الأنحاء؛ سواء كنت تسكن في أي مكان ستجد العديد من العروض والتي من خلالها يساعدك شخص عن طريق التليفون او الإنترنت؛ أي عن طريق الشات أو المنتديات. ولكن العديد من العروض يمكنك الإستفادة منها فقط حيت تسكن. في <b>كلارات اللاجئين<b> تجد عروضا في كل ألمانيا. اما في <b>كلارات الأسرة<b> فقد بدأنا ببرلين؛ هنا توجد بالفعل عروض كثيرة. ولكننا نجمع عروضا أكثر وقريبا سيكون لمدن كبرى أخرى في ألمانيا. "
+          answer: "بعض العروض في <b>كلارات الأسرة</b> و<b>كلارات اللاجئين</b> يمكن الأستفادة منها من  كل الأنحاء؛ سواء كنت تسكن في أي مكان ستجد العديد من العروض والتي من خلالها يساعدك شخص عن طريق التليفون او الإنترنت؛ أي عن طريق الشات أو المنتديات. ولكن العديد من العروض يمكنك الإستفادة منها فقط حيت تسكن. في <b>كلارات اللاجئين</b> تجد عروضا في كل ألمانيا. اما في <b>كلارات الأسرة</b> فقد بدأنا ببرلين؛ هنا توجد بالفعل عروض كثيرة. ولكننا نجمع عروضا أكثر وقريبا سيكون لمدن كبرى أخرى في ألمانيا."
           question: "هل توجد كلارات لألمانيا كلها؟"
         question_8:
           answer: "كلارات تعرض لك المساعدة المتاحة بالقرب منك. فإنك تجد كل العروض مجمعة وبشكل عام. علاوة على ذلك فنحن نقول لك ما يجب عليك أن تفعل بالضبط لكي تحصل على المساعدة. ونحن نكتب دائما بلغة سهلة ويمكن للجميع ان يفهمها. حتى يتمكن الناس الذين لا يجيدون الألمانية من العثور على المساعدة؛ كما يمكنك أيضا أن تقرأ العروض بلغات أخرى عديدة. إذا أردت أن تعرف أكثر عن هذه اللغات؛ إضغط هنا %{ref_to_how_many_languages}."
@@ -147,7 +147,7 @@ ar:
           answer: "في كلارات يمكنك أن تبحث لنفسك وللآخرين أيضا. على سبيل المثال لصديق أو كعم او خال  يمكنك أن تبحث لأبناء أخيك أو أختك. كأم يمكنك ان تبحثي لإبنتك. او كمدرس يمكنك ان تبحث لتلاميذك. ولكن لا تتعجب إذا ما وجدت اننا في البداية نوجه الخطاب للشخص الذي سوف يحصل على مساعدة. وهو في الغالب من الأطفال أو الشباب."
           question: "كيف أجد مساعدة؛ عندما أكون لا أبحث لنفسي ولكن لشخص آخر؟"
         question_2:
-          answer: "في كلارات الأسرة ستجد العديد من عروض الدعم التي تساعدك في مشكلات مختلفة. نحن قمنا بترتيبها لك على حسب الموضوع:\n<p>\n<ul>\n<li>\n<b>عربة الأطفال - مشكلات الأسرة</b><br>\nفي حالة المشاكل عند البلوغ, أو مشاكل التربية. هنا توجد لكل فرد من أفراد الأسرة مساعدة. هناك مساعدات كثيرة للأطفال وكذلك للآباء.\n</li>\n<br>\n<li>\n<b>الكتاب - التعلم والعمل</b><br>\nهنا تجد على سبيل المثال مساعدة؛ إذا ما كانت لديك مشاكل في المدرسة أو في التأهيل المهني. ولكنك ستجد أيضا مساعدة إذا كانت لديك مشاكل في العثور على تدريب مهني أو إذا كنت تبحث عن دورة لتعلم اللغة الألمانية. \n</li>\n<br>\n<li>\n<b>القلب - الصحة</b><br>\nهنا تجد على سبيل المثال مساعدة  إذا كنت تشعر بتعب لأنك مريض او لأن أحد أفراد أسرتك مريض. أو إذا كان أحدكم لدية مشكلة إدمان. ولكنك تجد أيضا مساعدة في حالة الحمل ومشكلاته.\n<li>\n<br>\n<li>\n<b>دليل السير - القلق في الحياة اليومية</b><br>\nهنا تجد مساعدة عندما يكون لديك قلق بسيط أو حتى كبير في مسائل الحياة اليومية. على سبيل المثال إذا كنت مهموم بسبب النقود أو إذا كنت تعيش في الشارع.  لكن أيضا  إذا كنت فقط تبحث عن شئ تفعله في وقت فراغك. أو إذا كنت تحتاج مساعدة في ملأ إستمارة أو طلب.\n</li>\n<br>\n<li>\n<b>قبضة اليد - العنف</b><br>\nهنا تجد مساعدة على سبيل المثال؛ إذا ضربك أو تحرش بك أحد. ولكنك تجد أيضا مساعدة إذا أصبحت أنت نفسك عدواني أو منحرف.\n</li>\n<br>\n<li>\n<b>قبضة اليد - العنف</b><br>\nهنا تجد مساعدة على سبيل المثال إذا تعرضت للضرب أو للتعذيب في الحرب. ولكنك ستجد أيضا مساعدة إذا كنت مثلا تريد أن تخرج من جماعة إسلامية.\n</li>\n<br>\n<li>\n<b>البرق - طوارئ</b><br>\nهنا تجد مساعدة إذا كنت في حالة طوارئ. ففي عروض المساعدة المكتوب بها ليلا ونهارا يمكنك دائما أن تتصل بهم بشكل عادي تماما سواء كان الوقت متأخر.\n</li>\n</ul>\n</p>"
+          answer: "في كلارات الأسرة ستجد العديد من عروض الدعم التي تساعدك في مشكلات مختلفة. نحن قمنا بترتيبها لك على حسب الموضوع:\n<p>\n<ul>\n<li>\n<b>عربة الأطفال - مشكلات الأسرة</b/><br>\nفي حالة المشاكل عند البلوغ, أو مشاكل التربية. هنا توجد لكل فرد من أفراد الأسرة مساعدة. هناك مساعدات كثيرة للأطفال وكذلك للآباء.\n</li>\n<br>\n<li>\n<b>الكتاب - التعلم والعمل</b/><br>\nهنا تجد على سبيل المثال مساعدة؛ إذا ما كانت لديك مشاكل في المدرسة أو في التأهيل المهني. ولكنك ستجد أيضا مساعدة إذا كانت لديك مشاكل في العثور على تدريب مهني أو إذا كنت تبحث عن دورة لتعلم اللغة الألمانية. \n</li>\n<br>\n<li>\n<b>القلب - الصحة</b/><br>\nهنا تجد على سبيل المثال مساعدة  إذا كنت تشعر بتعب لأنك مريض او لأن أحد أفراد أسرتك مريض. أو إذا كان أحدكم لدية مشكلة إدمان. ولكنك تجد أيضا مساعدة في حالة الحمل ومشكلاته.\n<li>\n<br>\n<li>\n<b>دليل السير - القلق في الحياة اليومية</b/><br>\nهنا تجد مساعدة عندما يكون لديك قلق بسيط أو حتى كبير في مسائل الحياة اليومية. على سبيل المثال إذا كنت مهموم بسبب النقود أو إذا كنت تعيش في الشارع.  لكن أيضا  إذا كنت فقط تبحث عن شئ تفعله في وقت فراغك. أو إذا كنت تحتاج مساعدة في ملأ إستمارة أو طلب.\n</li>\n<br>\n<li>\n<b>قبضة اليد - العنف</b/><br>\nهنا تجد مساعدة على سبيل المثال؛ إذا ضربك أو تحرش بك أحد. ولكنك تجد أيضا مساعدة إذا أصبحت أنت نفسك عدواني أو منحرف.\n</li>\n<br>\n<li>\n<b>قبضة اليد - العنف</b/><br>\nهنا تجد مساعدة على سبيل المثال إذا تعرضت للضرب أو للتعذيب في الحرب. ولكنك ستجد أيضا مساعدة إذا كنت مثلا تريد أن تخرج من جماعة إسلامية.\n</li>\n<br>\n<li>\n<b>البرق - طوارئ</b/><br>\nهنا تجد مساعدة إذا كنت في حالة طوارئ. ففي عروض المساعدة المكتوب بها ليلا ونهارا يمكنك دائما أن تتصل بهم بشكل عادي تماما سواء كان الوقت متأخر.\n</li>\n</ul>\n</p>"
           question: "ما هي الموضوعات التي أجد فيها مساعدة في كلارات الأسرة"
         question_3:
           answer: "في كلارات اللاجئين ستجد العديد من عروض الدعم التي تساعدك في مشكلات مختلفة. نحن قمنا بترتيبها لك على حسب الموضوع:\n<p>\n<ul>\n<li>\n<b>علامة الفقرة - اللجوء والقانون</b><br>\nهنا تجد مساعدة عندما يكون لديك أسئلة حول إجراءات اللجوء؛ سواء قبل أوأثناء أو  بعد قضية اللجوء. وذلك على سبيل المثال إذا كنت قد حصلت على الإقامة المؤقتة (دولدونج)؛ أو إذا كان لديك أسئلة حول القانون الألماني. هنا يجد  اللاجئون القصر أيضا الدعم .\n</li>\n<br>\n<li>\n<b>عربة الأطفال - مشكلات</b><br>\n الأسرة هنا تجد مساعدة إذا كانت لديك مشكلة في داخل الأسرة؛ على سبيل المثال في حالة المشاكل عند البلوغ, أو مشاكل التربية. هنا توجد لكل فرد من أفراد الأسرة مساعدة. هناك مساعدات كثيرة للأطفال وكذلك للآباء.\n</li>\n<br>\n<li>\n<b>القلب - الصحة</b><br>\nهنا تجد مساعدة إذا كنت على سبيل المثال مريضا أو إذا كنتِ حاملا. وستجد هنا أيضا مساعدة إذا كنت تعاني بسبب الحرب أو التعذيب؛ أو إذا كان لديك إعاقة. فستجد هنا أطباء وأخصائيين نفسيين يساعدون اللاجئين.\n<li>\n<br>\n<li>\n<b>الكتاب - التعلم والعمل</b><br>\nهنا تجد مساعدة إذا كانت لديك أسئلة حول موضوع التعلم والعمل؛ على سبيل المثال بالنسبة للحضانات والمدارس. أو إذا كنت تريد أن تعرف كيف يمكنك كلاجئ أن تدرس في ألمانيا؛ او إذا كنت تبحث عن مكان للتدريب المهني أو عمل. هنا تجد أيضا العديد من الدورات المختلفة لتعلم اللغة الألمانية؛ وكذلك دورات الإندماج التي يمكنك كلاجئ أن تحضرها. \n</li>\n<br>\n<li>\n<b>دليل السير - القلق في الحياة اليومية</b><br>\nهنا تجد مساعدة على سبيل المثال إذا كانت لديك مشاكل مع المصالح الحكومية. مثلا لأنك لا تتحدث الألمانية جيدا. فستجد هنا شخصا يترجم لك أو شخصا يذهب معك إلى المصالح الحكومية. وهنا تجد أيضا مساعدات أخرى؛ فنحن ندلك على أماكن حيث يمكنك الحصول على طعام, أوأثاث للمنزل أو ملابس. وستجد هنا أيضا عروضا من خلالها يمكنك التعرف على أناس آخرين؛ على سبيل المثال في نادي رياضي أو دورة للطبخ. \n</li>\n<br>\n<li>\n<b>قبضة اليد - العنف</b><br>\nهنا تجد مساعدة على سبيل المثال إذا تعرضت للضرب أو للتعذيب في الحرب. ولكنك ستجد أيضا مساعدة إذا كنت مثلا تريد أن تخرج من جماعة إسلامية.\n</li>\n<br>\n<li>\n<b>البرق - طوارئ</b><br>\nهنا تجد مساعدة عاجلة؛ إذا كنت في حالة طوارئ. في عروض المساعدة التي مكتوب فيها ليلا ونهارا يمكنك الإتصال دائما سواء كان الوقت متأخر.\n</li>\n</ul>\n</p>"
@@ -157,7 +157,15 @@ ar:
           question: "كيف أجد مساعدة عاجلة إذا كنتُ في حالة طوارئ"
         question_5:
           anchor: how_to_find_right_help
-          answer: "هناك طريقتان للعثور على المساعدة المناسبة لك\n<p>\n<ul>\n<li>\nإذا كنت تعرف بالفعل كيف تُسمَى المشكلة او المساعدة التي تبحث عنها؛ فعليك فقط أن تكتب هذا الإسم في خانة ماذا؟ في الصفحة الرئيسية. واكتب لاحقا في خانة أين؟ المكان الذي تبحث عن مساعدة فيه؛ أو انقر على خانة أين؟ ثم انقر على <b> استخدام موقعي.<b>  وبعد ذلك انتقر على العدسة وستجد المساعدة التي بالقرب منك.\n</li>\n<li>\nأما إذا كنت لا تعرف بالضبط ما اسم المشكلة فجرب البحث عن طريق التصنيف. فمثلا إذا كانت لديك مشاكل في الواجبات المدرسية؛ فإضغط على رمز الكتاب. في الجهة اليسرى تجد مصطلحات كثيرة في موضوع التعلم والعمل, والتي يمنكك بالتالي النقر عليها لاحقا. واكتب أيضا في خانة أين؟ المكان الذي تبحث عن مساعدة فيه؛ أو انقر في خانة أين؟ ثم انقر على <b> استخدام موقعي.<b>  وبعد ذلك انقر على العدسة وستجد المساعدة التي بالقرب منك. "
+          answer: |-
+            هناك طريقتان للعثور على المساعدة المناسبة لك
+            <p>
+            <ul>
+            <li>
+            إذا كنت تعرف بالفعل كيف تُسمَى المشكلة او المساعدة التي تبحث عنها؛ فعليك فقط أن تكتب هذا الإسم في خانة ماذا؟ في الصفحة الرئيسية. واكتب لاحقا في خانة أين؟ المكان الذي تبحث عن مساعدة فيه؛ أو انقر على خانة أين؟ ثم انقر على <b> استخدام موقعي.</b>  وبعد ذلك انتقر على العدسة وستجد المساعدة التي بالقرب منك.
+            </li>
+            <li>
+            أما إذا كنت لا تعرف بالضبط ما اسم المشكلة فجرب البحث عن طريق التصنيف. فمثلا إذا كانت لديك مشاكل في الواجبات المدرسية؛ فإضغط على رمز الكتاب. في الجهة اليسرى تجد مصطلحات كثيرة في موضوع التعلم والعمل, والتي يمنكك بالتالي النقر عليها لاحقا. واكتب أيضا في خانة أين؟ المكان الذي تبحث عن مساعدة فيه؛ أو انقر في خانة أين؟ ثم انقر على <b> استخدام موقعي.</b>  وبعد ذلك انقر على العدسة وستجد المساعدة التي بالقرب منك.
           question: "كيف يمكنني أن أجد المساعدة المناسبة لي؟"
         question_6:
           answer: "الكثير من عروض المساعدة التي توجد في كلارات مجانية؛ ولكن هناك أيضا مساعدات تكلف شيئا ما. هذا لا يعني أنه عليك أن تدفع شخصيا وبشكل تلقائي. ولكن ربما يكون على شركة التأمين الصحي أن تتحمل النفقات أو تقوم بذلك إحدي الهيئات العامة؛ وهذه يمكن ان تكون مصلحة حكومية مثلا أو مؤسسة ما. فمن الأفضل في هذه الحالة أن تسأل مقدمي تلك العروض لكي تعرف بالضبط إذا كان عرض الدعم مجاني بالنسبة لك أم لا."
@@ -481,6 +489,7 @@ ar:
         wol: Wol
         zho: Zho
         zza: Zza
+        mul: 
       section:
         family: Family
         refugees: Refugees
@@ -806,6 +815,10 @@ ar:
       offers_all: "ما هي المساعدة التي تقدمها المنظمة؟"
       where: "أين تجد المنظمة؟"
       who: "ماذا تفعل المنظمة؟"
+      headline--family: 
+      headline-offers--family: 
+      headline-offers--refugees: 
+      headline--refugees: 
   pages:
     about:
       amina: |
@@ -1398,3 +1411,11 @@ ar:
     new:
       button: "الرسالة وصلت"
       email_placeholder: "عنوان البريد الإليكتروني"
+  offer:
+    stamp:
+      target_audience:
+        family_acquaintances: 
+        family_children:
+          default: 
+        prefix: 
+        refugees_general: 
