--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -909,6 +909,7 @@ en:
         wol: Wol
         zho: Zho
         zza: Zza
+        mul: 
       section:
         family: Family
         refugees: Refugees
@@ -1205,7 +1206,7 @@ en:
           tue: Tuesday
           wed: Wednesday
         heading: When can you do that?
-      speaking: In what language will you get help?
+      speaking: What languages do they speak?
       website_section:
         internet_presence: Where can you get more information online?
         websites:
@@ -1250,6 +1251,10 @@ en:
       offers_all: What kind of help does the organization offer?
       where: Where is the organization located?
       who: What does the organization do?
+      headline--family: 
+      headline-offers--family: 
+      headline-offers--refugees: 
+      headline--refugees: 
   pages:
     about:
       amina: |
@@ -1865,3 +1870,11 @@ en:
     new:
       button: Send
       email_placeholder: Email address
+  offer:
+    stamp:
+      target_audience:
+        family_acquaintances: 
+        family_children:
+          default: 
+        prefix: 
+        refugees_general: 
