--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -515,6 +515,7 @@ tr:
         wol: Wol
         zho: Zho
         zza: Zza
+        mul: 
       section:
         family: Family
         refugees: Refugees
@@ -855,6 +856,10 @@ tr:
       offers_all: Bu organizasyon ne tür yardımlar sunmaktadır?
       where: Bu organizasyonu nerede bulabilirsin?
       who: Bu organizasyon ne yapmaktadır?
+      headline--family: 
+      headline-offers--family: 
+      headline-offers--refugees: 
+      headline--refugees: 
   pages:
     about:
       amina: Amina sosyal pedagog ve toplum hakkında çok iyi bilgisi var. Neyin önemli ve öncelikli olduğunu hemen görüyor. Clarat'ta araştırma ekibinde. Amina nelerin Clarat teklifi olabileceğine karar veriyor. En sevdiği müzik parçası Erlend Oye’den La Prima Erlend.
@@ -1304,3 +1309,11 @@ tr:
     new:
       button: Mesaj alınmıştır
       email_placeholder: E-Mail Adresi
+  offer:
+    stamp:
+      target_audience:
+        family_acquaintances: 
+        family_children:
+          default: 
+        prefix: 
+        refugees_general: 
