--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -882,6 +882,7 @@ en:
         ltz: Ltz
         luo: Luo
         mkd: Mkd
+        mul: Mul
         nor: Nor
         pol: Pol
         por: Por
@@ -1100,7 +1101,7 @@ en:
         gplus:
           anchor: Google+
           href: https://plus.google.com/110429028641743127592/about
-        impressum: Site notice
+        impressum: imprint
         privacy: Privacy
         tos: Legal information
         twitter:
@@ -1205,7 +1206,7 @@ en:
           tue: Tuesday
           wed: Wednesday
         heading: When can you do that?
-      speaking: In what language will you get help?
+      speaking: What languages do they speak?
       website_section:
         internet_presence: Where can you get more information online?
         websites:
@@ -1247,6 +1248,10 @@ en:
       time_frame: "%{open} - %{close}"
   organizations:
     show:
+      headline--family: Family
+      headline--refugees: Refugees
+      headline-offers--family: Family
+      headline-offers--refugees: Refugees
       offers_all: What kind of help does the organization offer?
       where: Where is the organization located?
       who: What does the organization do?
@@ -1478,12 +1483,12 @@ en:
           for help for your family. And on clarat refugees if you are looking
           for help for refugees.
     impressum:
-      heading: Site notice
-      responsible_html: |
-        CEO of the Benckiser Stiftung Zukunft<br/>
-        Dr. Dr. Christoph Glaser<br/>
-        (responsible for the website content)
-      title: Site notice
+      heading: Impressum
+      responsible_html: |-
+        Geschäftsführer<br/>
+        Dr. Stefan Shaw und Mathias Barth<br/>
+        (verantwortlich für den Inhalt der Website)
+      title: Impressum
     not_found:
       description: |
         Enter a term in the search field describing the help you're looking for.
@@ -1800,31 +1805,30 @@ en:
         email: |
           %{mailto}
         fax: Fax +49 (0)30 55 57 96 09 9
-        name: clarat
-        name2: Projekt der Benckiser Stiftung Zukunft
+        name: clarat gGmbH
         street: Französische Straße 47
         telephone: Tel +49 (0)30 55 57 96 00
         zip_city: 10117 Berlin
   routes:
     '404': "'404'"
     contacts: contacts
-    datenschutzhinweise: 
-    definitions: 
+    datenschutzhinweise: privacy
+    definitions: definitions
     emails: emails
     faq: frequently-asked-questions
     haeufige-fragen: frequently-asked-questions
-    impressum: site-notice
+    impressum: impressum
     new: new
     offers: offers
     organizations: organizations
     preview: preview
-    rechtliche-hinweise: 
+    rechtliche-hinweise: legal-information
     search_locations: 
-    subscribe: 
+    subscribe: subscribe
     subscriptions: 
     ueber-uns: about-us
-    unsubscribe: 
-    update_requests: 
+    unsubscribe: unsubscribe
+    update_requests: update_requests
     users: users
   shareds:
     forms:
@@ -1838,10 +1842,10 @@ en:
         In that case you should have a look at the German original.
     tooltips:
       welcome:
-        advanced_search: 
+        advanced_search: Do you want to refine your search? Click here. Advanced search options will open up automatically.
         world_switch:
-          family: 
-          refugees: 
+          family: Click here to get to clarat family. In clarat family, you can search for help and support offerings for children, adolescents and families.
+          refugees: Click here to get to clarat refugees. In clarat refugees, you can search for help and support offerings for refugees.
   simple_form:
     required:
       html: <abbr title="required">*</abbr>
@@ -1856,7 +1860,7 @@ en:
       new:
         button: Subscribe to our newsletter
         placeholder: Email address
-  success: 
+  success: 'Thanks! Soon, clarat will exist in your area, too. We will inform you respectively. '
   update_requests:
     create:
       success: |
