--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1313,7 +1313,7 @@ de:
     show:
       headline--family: Family
       headline--refugees: Refugees
-      headline-offers--family: Family
+      headline-offers--family: Familes
       headline-offers--refugees: Refugees
       offers_all: Welche Hilfe bietet diese Organisation?
       where: Wo findest du die Organisation?
