--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -335,7 +335,7 @@ tr:
       shared:
         explanation_1: "Burada clarat'taki tüm tekliflerini bir arada görebilirsin. \nBunlar, e-mail adresini bulduğumuz teklifler olmaktadır."
         explanation_2: Gelecekte yeni tekliflerini bulursak, bunların bağlantılarını burada da bulabileceksin.
-        explanation_3: 
+        explanation_3: Bunun için bu sayfayı yer işareti olarak kayderek clarat'ta senin ile ilgili neler olduğunu hızlıca görebilirsin.
         explanation_4: |-
           Yeni teklfilerin clarat'ta yayınlandığında e-mail yolu ile haberdar olmak ister misin?
           O halde sana yolladığımız e-mailin sonundaki bağlantıyı kullan.
@@ -488,7 +488,7 @@ tr:
         ltz: Ltz
         luo: Luo
         mkd: Mkd
-        mul: 
+        mul: Mul
         nor: Nor
         pol: Pol
         por: Por
@@ -580,7 +580,7 @@ tr:
       form_more_label: Arama tercihlerini göster
       headlines:
         age: "Çocuğun yaşı"
-        approach: 
+        approach: Nasıl?
         gender: Cinsiyet
         language: Dil
         target_audience: Kim için destek?
@@ -596,9 +596,9 @@ tr:
       faq_text: 'Sıkça sorulan soruları ve cevapları bulabilirsin '
       language_explanation:
         connector: ve
-        text: 
+        text: Bu destek türü %{language_list} mevcuttur.
       map:
-        cooperation: 
+        cooperation: Ortak çalışılan bir proje
         enlarge_map: Haritayı büyüt
         headline_small_map: Bulunduğum yerde sunulan hizmetleri haritada göster
       more: Daha fazla telefon ve online hizmetler
@@ -732,7 +732,7 @@ tr:
           pl: Polski
           ru: "Русский"
           tr: Türkçe
-        title: 'Bitte folgendes übersetzen: ''Automatische Übersetzungen!'''
+        title: Otomatik çeviriler
       navigation:
         category_headline: Kategoriler arasında ara
         claim:
@@ -799,7 +799,7 @@ tr:
     show:
       last_update: Son kayıt düzenleme tarihi
       next_steps:
-        code_word: 
+        code_word: Ne sorman gerekir veya sitede neyi araman gerekir?
         heading: Ne yapmalısın?
       opening_section:
         days:
@@ -853,10 +853,8 @@ tr:
       time_frame: "%{open} - %{close}"
   organizations:
     show:
-      headline--family: Family
-      headline--refugees: Refugees
-      headline-offers--family: Family
-      headline-offers--refugees: Refugees
+      headline-offers--family: "Çocuklar, gençler ve aileler için yardıum çeşitleri"
+      headline-offers--refugees: Mülteciler için yardım çeşitleri
       offers_all: Bu organizasyon ne tür yardımlar sunmaktadır?
       where: Bu organizasyonu nerede bulabilirsin?
       who: Bu organizasyon ne yapmaktadır?
@@ -1261,12 +1259,12 @@ tr:
     organizations: organizasyonlar
     preview: "Ön izleme"
     rechtliche-hinweise: Yasal uyarılar
-    search_locations: 
+    search_locations: search_locations
     subscribe: subscribe
-    subscriptions: 
+    subscriptions: supsciptions
     ueber-uns: ueber-uns
     unsubscribe: unsubscribe
-    update_requests: 
+    update_requests: update_request
     users: kullanıcılar
   shareds:
     forms:
@@ -1280,10 +1278,10 @@ tr:
         Bu gibi durumlarda Almanca metne bakman daha doğru olacaktır.
     tooltips:
       welcome:
-        advanced_search: 
+        advanced_search: Daha detaylı bir arama mı yapmak istiyorsun? O halde buraya tıkla. Karşına seçenekler içeren bir kutu açılacak.
         world_switch:
-          family: 
-          refugees: 
+          family: Buraya tıkladığında clarat Family erişebilirsin. clarat Family'de çocuklar, gençler ve aileler için destek arayabilirsin.
+          refugees: Buraya tıkladığında clarat Refugees'e erişebilirsin. clarat Refugees'de mülteciler için destek arayabilirsin.
   simple_form:
     required:
       html: <abbr title="required">*</abbr>
@@ -1299,7 +1297,7 @@ tr:
       new:
         button: E-bülten aboneliği
         placeholder: E-Mail Adresi
-  success: 
+  success: Teşekkür ederiz. Çok yakında senin bulunduğun yerde de desteklerimiz olacak. Bu gerçekleşince tarafımızdan bir e-mail alacaksın.
   update_requests:
     create:
       success: |
