localeapp pull: fixed some mistakes in pl locale

--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -265,7 +265,7 @@ pl:
           answer: Wiele ofert pomocy, które znajdziesz w claracie, są bezpłatne. Jednakże istnieją formy pomocy, które są płatne, co nie znaczy, że będziesz musiał sam wnieść opłaty za usługę. Jest możliwe, że kasa chorych (ZUS) poniesie koszty. Nie wykluczone, że koszty przejmie instytucja publiczna, np. urząd. Niemniej jednak, najlepiej poinformować się o ewentualnych kosztach tam, gdzie pomoc jest oferowana. Wówczas dowiesz się na pewno, czy musisz liczyć się z kosztami, czy też usługa jest dla ciebie bezpłatna.
           question: Czy znajdę bezpłatną pomoc?
         question_7:
-          answer: Z niektórych propozycji pomocy, które znajdziesz w claracie, możesz skorzystać anonimowo. To znaczy, że nikomu nie musisz mówić, jak się nazywasz. Jeśli z danej pomocy możesz skorzystać anonimowo, znajdziesz to w claracie pod <i>co musisz zrobić?<i/> Jeśli tego brakuje, najlepiej dowiedz się niezwłocznie w miejscu, gdzie pomoc jest proponowana.
+          answer: Z niektórych propozycji pomocy, które znajdziesz w claracie, możesz skorzystać anonimowo. To znaczy, że nikomu nie musisz mówić, jak się nazywasz. Jeśli z danej pomocy możesz skorzystać anonimowo, znajdziesz to w claracie pod <i>co musisz zrobić?</i> Jeśli tego brakuje, najlepiej dowiedz się niezwłocznie w miejscu, gdzie pomoc jest proponowana.
           question: Znajdę pomoc, z której mogę anonimowo skorzystać?
         question_8:
           answer: |-
@@ -323,7 +323,7 @@ pl:
           question: Jak tłumaczymy trudne słowa w clarat?
         question_3:
           answer: W clarat stosujemy prosty język. To znaczy między innymi, że używamy krótkich zdań. Dlatego nie piszemy np. uczniowie i uczennice. Zamiast tego tylko uczniowie. Choć mamy na myśli uczniów i uczennice. To dla nas ważne, traktować wszystkich na równych prawach. Ale krótkie zdania są łatwiejsze w czytaniu.
-          question: Dlaczego w clarat zawsze jest napisane tylko <i>uczniowie<i/>, a nie <i>uczniowie i uczennice<i/>?
+          question: Dlaczego w clarat zawsze jest napisane tylko <i>uczniowie</i>, a nie <i>uczniowie i uczennice</i>?
         question_4:
           answer: W clarat znajdziesz pomoc dla dzieci, młodzieży i rodziców każdej orientacji seksualnej. Dla lesbijek, gejów, osób biseksualnych, transseksualnych i interseksualnych. Nie możemy zawsze ich wymieniać i opisywać. Ponieważ teksty w clarat muszą być proste i krótkie. Dlatego stosujemy skrót LGBTI. To angielski skrót oznaczający lesbijki, gejów, osoby biseksualne, transseksualne i interseksualne.
           question: Dlaczego clarat stosuje skrót <i>LGBTI</i>?
